--- a/template/src/index.html
+++ b/template/src/index.html
@@ -3,10 +3,59 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>{{ name }}</title>
+  <title>{{ name }}</title>{{#redirected}}
+  <script>
+    // 重定向后css/js需绝对路径引入
+    var url = window.location.href;
+    var env = /(localhost|fe.office.bzdev.net\/moekit\/)/.test(url) ? 'dev' : 'product';
+    
+    if (env === 'product') {
+      var matched = url.match(/\/\/(\w*).([\w.]*)(\/\w*\/\w*)?/);
+      var domain = '';
+      if (/bozhong.com/.test(matched[0])) {
+        domain = '//scdn.bozhong.com/source';
+      } else if (/fe.office.bzdev.net/.test(matched[0])) {
+        domain = '//fe.' + matched[2] + matched[3];
+      } else {
+        domain = '//source.' + matched[2];
+      }
+
+      var baseHref = document.createElement('base');
+      // 按项目路径修改basehref路径_filePath，如activity/health，_filepath改成'activity/health'
+      baseHref.href = domain + '/_filePath';
+
+      document.head.appendChild(baseHref);
+    }
+  </script>
+  {{/redirected}}
 </head>
 <body>
   <div id="app">
-  </div>
+  </div>{{#redirected}}
+  <script type="text/javascript">
+    if (env === 'product') {
+      var queueIndex = 0;
+      function loadScript (src, next) {
+        var script = document.createElement('script');
+        script.src = src;
+        document.body.appendChild(script);
+        script.onload = function () {
+          if (next) {
+            next();
+          }
+        };
+      }
+      function loadScriptLoop () {
+        loadScript(files[queueIndex], function () {
+          queueIndex += 1;
+          if (queueIndex < files.length) {
+            loadScriptLoop();
+          }
+        });
+      }
+      loadScriptLoop();
+    }
+  </script>
+{{/redirected}}
 </body>
 </html>
